--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.0.0",
     "@hot-loader/react-dom": "^16.8.6",
     "@types/jest": "^24.0.13",
+    "@types/lodash": "^4.14.132",
     "@types/node": "^12.0.2",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
