--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "typescript_react_template",
+  "name": "bach_cococo",
   "version": "0.1.0",
-  "description": "Typescript React Template",
+  "description": "Bach CoCoCo",
   "author": "Andy Coenen",
   "license": "MIT",
   "scripts": {
     "build": "yarn run clean-dist && webpack -p --config=configs/webpack/prod.js",
     "clean-dist": "rm -f -r -d dist",
-    "lint": "tslint './src/**/*.ts*' --format stylish --force",
-    "start": "yarn run start-dev",
-    "dev": "yarn start-dev",
-    "start-dev": "webpack-dev-server --config=configs/webpack/dev.js",
-    "start-prod": "yarn run build && node express.js",
-    "test": "jest --watch --coverage --config=configs/jest.json"
+    "start": "yarn run dev",
+    "dev": "webpack-dev-server --config=configs/webpack/dev.js",
+    "deploy": "yarn build && node deploy.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -30,6 +27,7 @@
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "jest": "^24.8.0",
