--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "gh-pages": "^2.0.1",
@@ -51,6 +52,7 @@
     "@material-ui/icons": "^4.0.0",
     "@material-ui/lab": "^4.0.0-alpha.13",
     "@tensorflow/tfjs": "^1.1.2",
+    "axios": "^0.19.0",
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.4",
