--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "yarn run clean-dist && webpack -p --config=configs/webpack/prod.js",
     "clean-dist": "rm -f -r -d dist",
     "start": "yarn run dev",
-    "dev": "webpack-dev-server --config=configs/webpack/dev.js",
+    "dev": "NODE_ENV=dev webpack-dev-server --config=configs/webpack/dev.js",
+    "test-dev": "NODE_ENV=dev webpack --config=configs/webpack/dev.js",
     "deploy": "yarn build && node deploy.js"
   },
   "devDependencies": {
@@ -16,33 +17,28 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "@hot-loader/react-dom": "^16.8.6",
-    "@types/jest": "^24.0.13",
     "@types/lodash": "^4.14.132",
     "@types/node": "^12.0.2",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
-    "awesome-typescript-loader": "^5.2.1",
+    "autodll-webpack-plugin": "^0.4.2",
     "babel-loader": "^8.0.6",
+    "cache-loader": "^4.1.0",
     "css-loader": "^2.1.1",
     "dotenv-webpack": "^1.7.0",
-    "express": "^4.16.4",
     "file-loader": "^3.0.1",
+    "fork-ts-checker-webpack-plugin": "^1.5.0",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
-    "jest": "^24.8.0",
-    "node-sass": "^4.12.0",
     "prettier": "^1.17.1",
-    "react-hot-loader": "^4.8.4",
-    "sass-loader": "^7.1.0",
+    "react-hot-loader": "^4.12.10",
     "style-loader": "^0.23.1",
-    "tslint": "^5.16.0",
+    "thread-loader": "^2.1.2",
+    "ts-loader": "^6.0.4",
     "typescript": "^3.5.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "^3.3.1",
     "webpack-merge": "^4.2.1"
   },
