--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.4",
+    "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "tonal": "^2.2.2",
