--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@material-ui/lab": "^4.0.0-alpha.13",
     "@tensorflow/tfjs": "^1.1.2",
     "axios": "^0.19.0",
+    "firebase": "^6.3.5",
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.4",
