--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "@tensorflow/tfjs": "^1.1.2",
     "axios": "^0.19.0",
     "firebase": "^6.3.5",
+    "konva": "^4.0.7",
     "lodash": "^4.17.11",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.4",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-konva": "^16.9.0-0",
     "tonal": "^2.2.2",
     "typestyle": "^2.0.2"
   },
