--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "sourceMap": true,
     "noImplicitAny": false,
     "module": "commonjs",
-    "target": "es5",
+    "target": "ES6",
     "jsx": "react",
     "lib": ["es5", "es6", "dom"],
     "experimentalDecorators": true,
